--- a/.env.dev
+++ b/.env.dev
@@ -2,5 +2,5 @@ DATABASE_HOST=localhost
 DATATBASE_PORT=3306
 DATABASE_USER=root
 DATABASE_PASSWORD=password
-DATABASE_NAME=AddressBook
-SYNCHRONIZE=true
+DATABASE_NAME=AddressBook3
+SYNCHRONIZE=false
