--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "typeorm": "ts-node ./node_modules/typeorm/cli",
-    "typeorm:run-migrations": "NODE_ENV=dev npm run typeorm migration:run -- -d ./src/typeorm.ts",
+    "typeorm:run-migration": "NODE_ENV=dev npm run typeorm migration:run -- -d ./src/typeorm.ts",
     "typeorm:generate-migration": "NODE_ENV=dev npm run typeorm -- -d src/typeorm.ts migration:generate src/migrations/$npm_config_name",
     "typeorm:create-migration": "NODE_ENV=dev npm run typeorm -- migration:create ./src/migrations/$npm_config_name",
     "typeorm:revert-migration": "NODE_ENV=dev npm run typeorm -- -d ./src/typeorm.ts migration:revert"
