--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/typeorm": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/passport-jwt": "^3.0.9",
+    "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
