--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,6 @@
 DATABASE_HOST=localhost
 DATATBASE_PORT=3306
-DATABASE_USER=root
+DATABASE_USER=appuser
 DATABASE_PASSWORD=password
 DATABASE_NAME=AddressBook
 SYNCHRONIZE=true
