--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 DATABASE_HOST=localhost
 DATATBASE_PORT=3306
-DATABASE_USER=root
+DATABASE_USER=appuser
 DATABASE_PASSWORD=password
 DATABASE_NAME=AddressBook
 SYNCHRONIZE=false
+JWT_SECRET_KEY=secretkey
