--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/config": "^3.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.1.1",
+    "@nestjs/passport": "^10.0.2",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.4.3",
@@ -41,7 +42,9 @@
     "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
@@ -57,6 +60,7 @@
     "@types/jest": "28.1.8",
     "@types/node": "^16.0.0",
     "@types/passport-jwt": "^3.0.12",
+    "@types/passport-local": "^1.0.37",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
