--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "NODE_ENV=e2e jest --config ./test/jest-e2e.json"
+    "test:e2e": "NODE_ENV=e2e jest --config ./jest-e2e.json --coverage"
   },
   "dependencies": {
     "@nestjs/cache-manager": "^2.1.0",
