--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,6 @@
-DATABASE_HOST=localhost
+DATABASE_HOST=addressbook.cmwkn89vmypr.ap-southeast-2.rds.amazonaws.com
 DATATBASE_PORT=3306
-DATABASE_USER=root
+DATABASE_USER=appuser
 DATABASE_PASSWORD=password
 DATABASE_NAME=AddressBook
 SYNCHRONIZE=false
