--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
-DATABASE_HOST=addressbook.cmwkn89vmypr.ap-southeast-2.rds.amazonaws.com
+DATABASE_HOST=[DB Address]
 DATATBASE_PORT=3306
 DATABASE_USER=appuser
 DATABASE_PASSWORD=password
