--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.4.3",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.1",
     "@nestjs/typeorm": "^10.0.0",
     "cache-manager": "^5.2.3",
